Update axum and many dependencies (#3825)
* Update many dependencies; includes prs 3820 (axum 0.8.1), 3810 (wry 0.50.1), 3801 (tauri)

---------

Co-authored-by: Jonathan Kelley <jkelleyrtp@gmail.com>

--- a/example-projects/fullstack-hackernews/Cargo.toml
+++ b/example-projects/fullstack-hackernews/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 
 [dependencies]
 dioxus = { workspace = true, features = ["fullstack", "router"] }
-chrono = { version = "0.4.38", features = ["serde"] }
+chrono = { workspace = true, features = ["serde"] }
 reqwest = { workspace= true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
 
