--- a/packages/devtools/Cargo.toml
+++ b/packages/devtools/Cargo.toml
@@ -18,14 +18,14 @@ serde_json = { workspace = true }
 
 # hot reloading serve
 tracing = { workspace = true }
-warnings.workspace = true
+warnings = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-tungstenite = { version = "0.23.0" }
+tungstenite = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
-serde_json = "1.0.91"
+serde_json = { workspace = true }
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
