--- a/packages/fullstack-protocol/Cargo.toml
+++ b/packages/fullstack-protocol/Cargo.toml
@@ -4,11 +4,11 @@ edition = "2021"
 version.workspace = true
 
 [dependencies]
-ciborium.workspace = true
+ciborium = { workspace = true }
 dioxus-core = { workspace = true }
 base64 = { workspace = true }
 serde = { workspace = true }
-tracing.workspace = true
+tracing = { workspace = true }
 
 [features]
 web = []
