--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -17,18 +17,18 @@ dioxus-rsx = { workspace = true, optional = true }
 dioxus-html-internal-macro = { workspace = true }
 dioxus-hooks = { workspace = true }
 generational-box = { workspace = true }
-serde = { version = "1", features = ["derive"], optional = true }
-serde_repr = { version = "0.1", optional = true }
-js-sys = { version = "0.3.56", optional = true }
-euclid = "0.22.7"
-enumset = "1.1.2"
-keyboard-types = { version = "0.7", default-features = false }
-async-trait = { version = "0.1.58" }
+serde = { workspace = true, features = ["derive"], optional = true }
+serde_repr = { workspace = true, optional = true }
+js-sys = { workspace = true, optional = true }
+keyboard-types = { workspace = true, default-features = false }
+async-trait = { workspace = true }
 tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
 futures-channel = { workspace = true }
-serde_json = { version = "1", optional = true }
-tracing.workspace = true
+serde_json = { workspace = true, optional = true }
+tracing = { workspace = true }
 rustversion = { workspace = true }
+euclid = "0.22.11"
+enumset = "1.1.5"
 
 [build-dependencies]
 lazy-js-bundle = { workspace = true }
