--- a/packages/mobile/Cargo.toml
+++ b/packages/mobile/Cargo.toml
@@ -8,13 +8,14 @@ repository = "https://github.com/DioxusLabs/dioxus/"
 homepage = "https://dioxuslabs.com/learn/0.6/getting_started"
 keywords = ["dom", "ui", "gui", "react"]
 license = "MIT OR Apache-2.0"
+rust-version = "1.71.1"
 
 [dependencies]
 dioxus-desktop = { workspace = true }
 dioxus-lib = { workspace = true }
 dioxus-cli-config = { workspace = true }
-libc = "0.2.159"
-once_cell.workspace = true
+libc = "0.2.170"
+once_cell = { workspace = true }
 
 [target.'cfg(target_os = "android")'.dependencies]
 jni = "0.21.1"
