--- a/packages/server-macro/Cargo.toml
+++ b/packages/server-macro/Cargo.toml
@@ -9,19 +9,16 @@ authors = ["Jonathan Kelley", "Evan Almloff"]
 license = "MIT OR Apache-2.0"
 description = "Server function macros for Dioxus"
 
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-proc-macro2 = "^1.0.63"
-quote = "^1.0.26"
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
 syn = { workspace = true, features = ["full"] }
 server_fn_macro = "0.8.0-rc1"
 
 [dev-dependencies]
 dioxus = { workspace = true, features = ["fullstack"] }
 serde = { workspace = true, features = ["derive"] }
-tower-http = { workspace = true, features = ["timeout"]}
+tower-http = { workspace = true, features = ["timeout"] }
 axum = { workspace = true }
 
 [lib]
