--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,7 +114,6 @@ members = [
     "packages/playwright-tests/nested-suspense",
     "packages/playwright-tests/cli-optimization",
     "packages/playwright-tests/wasm-split-harness",
-    "packages/playwright-tests/wasm-split-harness",
     "packages/playwright-tests/default-features-disabled"
 ]
 
@@ -180,112 +179,130 @@ wasm-split-harness = { path = "packages/playwright-tests/wasm-split-harness", ve
 warnings = { version = "0.2.1" }
 
 # a fork of pretty please for tests - let's get off of this if we can!
-prettier-please = { version = "0.3.0", features = ["verbatim"]}
-anyhow = "1.0.95"
-clap = { version = "4.5.7" }
+prettier-please = { version = "0.3.0", features = ["verbatim"] }
+anyhow = "1.0.97"
+clap = { version = "4.5.31" }
 askama_escape = "0.10.3"
-tracing = "0.1.37"
+tracing = "0.1.41"
 tracing-futures = "0.2.5"
-tracing-subscriber = { version = "0.3.18", default-features = false }
+tracing-subscriber = { version = "0.3.19", default-features = false }
 toml = "0.8"
-tokio = "1.40"
-slab = "0.4.2"
+tokio = "1.43"
+tokio-util = { version = "0.7.13" }
+tokio-stream = { version = "0.1.17" }
+slab = "0.4.9"
 slotmap = { version = "1.0.7", features = ["serde"] }
 futures = "0.3.31"
 futures-channel = "0.3.31"
 futures-util = { version = "0.3", default-features = false }
-rustc-hash = "1.1.0"
-wasm-bindgen = "0.2.99"
-wasm-bindgen-futures = "0.4.42"
-js-sys = "0.3.76"
-web-sys = { version = "0.3.76", default-features = false }
+rustc-hash = "2.1.1"
+wasm-bindgen = "0.2.100"
+wasm-bindgen-futures = "0.4.50"
+js-sys = "0.3.77"
+web-sys = { version = "0.3.77", default-features = false }
 html_parser = "0.7.0"
-thiserror = "1.0.40"
-prettyplease = { version = "0.2.20", features = ["verbatim"] }
-const_format = "0.2.32"
-cargo_toml = { version = "0.20.3" }
-tauri-utils = { version = "=2.1.1" }
-tauri-bundler = { version = "=2.2.3" }
-lru = "0.12.2"
-async-trait = "0.1.77"
+thiserror = "2.0.12"
+prettyplease = { version = "0.2.30", features = ["verbatim"] }
+const_format = "0.2.34"
+cargo_toml = { version = "0.21.0" }
+tauri-utils = { version = "2.2.0" }
+tauri-bundler = { version = "2.2.4" }
+lru = "0.13.0"
+async-trait = "0.1.87"
 axum = "0.8.1"
 axum-server = { version = "0.7.1", default-features = false }
-tower = "0.4.13"
-http = "1.0.0"
-notify = { version = "6.1.1" }
-tower-http = "0.5.2"
-hyper = "1.0.0"
-hyper-rustls = { version= "0.27.2", default-features = false , features=["native-tokio","http1","http2","tls12","logging","ring"]}
-rustls = { version="0.23.12", default-features=false, features =["logging","std","tls12","ring"] }
-serde_json = "1.0.61"
-serde = "1.0.61"
+tower = "0.5.2"
+http = "1.2.0"
+notify = { version = "8.0.0" }
+tower-http = "0.6.2"
+hyper = "1.6.0"
+hyper-rustls = { version = "0.27.5", default-features = false, features = [
+  "native-tokio",
+  "http1",
+  "http2",
+  "tls12",
+  "logging",
+  "ring",
+] }
+rustls = { version = "0.23.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
+serde_json = "1.0.140"
+serde = "1.0.218"
 syn = "2.0"
 quote = "1.0"
 proc-macro2 = "1.0"
 axum_session = "0.16.0"
 axum_session_auth = "0.16.0"
 axum_session_sqlx = "0.5.0"
-axum-extra = "0.9.2"
-reqwest = "0.12.5"
-owo-colors = "4.0.0"
-ciborium = "0.2.1"
+axum-extra = "0.10.0"
+reqwest = "0.12.12"
+owo-colors = "4.2.0"
+ciborium = "0.2.2"
 base64 = "0.22.1"
-once_cell = "1.17.1"
-uuid = "1.9.1"
-convert_case = "0.6.0"
-tokio-tungstenite = { version = "0.23.1" }
+once_cell = "1.20.3"
+uuid = "1.15.1"
+convert_case = "0.8.0"
+tungstenite = { version = "0.26.2" }
+tokio-tungstenite = { version = "0.26.2" }
 gloo-timers = "0.3.0"
-fluent-uri = { version = "0.2.0", features = ["serde"] }
-internment = { version = "0.7.0" }
+fluent-uri = { version = "0.3.2", features = ["serde"] }
+internment = { version = "0.8.6" }
 proc-macro2-diagnostics = { version = "0.10", default-features = false }
-env_logger = "0.11.0"
-chrono = { version = "0.4.34" }
-gloo = { version = "0.8.0" }
-gloo-utils = { version = "0.1.6" }
-rustversion = "1.0.17"
-rand = "0.8.5"
+env_logger = "0.11.6"
+chrono = { version = "0.4.40" }
+gloo = { version = "0.11.0" }
+gloo-utils = { version = "0.2.0" }
+rustversion = "1.0.20"
+rand = "0.8"
 longest-increasing-subsequence = "0.1.0"
 trybuild = "1.0"
-dirs = "5.0.1"
-cargo-config2 = "0.1.26"
+dirs = "6.0.0"
+cargo-config2 = "0.1.32"
 criterion = { version = "0.5" }
-cargo_metadata = "0.18.1"
-parking_lot = "0.12.1"
+cargo_metadata = "0.19.2"
+parking_lot = "0.12.3"
 tracing-wasm = "0.2.1"
 console_error_panic_hook = "0.1.7"
 base16 = "0.2.1"
 digest = "0.10.7"
 sha2 = "0.10.8"
-walrus = { version = "0.23.2", features = ["parallel"] }
+walrus = { version = "0.23.3", features = ["parallel"] }
 id-arena = "2.2.1"
-async-compression = { version = "0.4.8", features = ["futures-io", "gzip", "brotli"] }
-getrandom = { version = "0.2" }
-async-once-cell = { version = "0.5.3" }
-rayon = "1.2.0"
-wasmparser = "0.225.0"
+async-compression = { version = "0.4.20", features = ["futures-io", "gzip", "brotli"] }
+getrandom = { version = "0.3.1" }
+async-once-cell = { version = "0.5.4" }
+rayon = "1.10.0"
+wasmparser = "0.226.0"
 itertools = "0.14.0"
-macro-string = "0.1.3"
+macro-string = "0.1.4"
 walkdir = "2.5.0"
 url = "2.3.1"
+separator = "0.4.1"
+pretty_assertions = "1.4.0"
+serde_repr = "0.1"
+hyper-util = "0.1.10"
 
 # desktop
-wry = { version = "0.50.1", default-features = false }
-tao = { version = "0.30.8", features = ["rwh_05"] }
-webbrowser = "1.0.1"
-infer = "0.16.0"
+wry = { version = "0.50.3", default-features = false }
+tao = { version = "0.32.6", features = ["rwh_05"] }
+webbrowser = "1.0.3"
+infer = "0.19.0"
 dunce = "1.0.5"
-urlencoding = "2.1.2"
-global-hotkey = "0.6.0"
-rfd = { version = "0.14", default-features = false }
-muda = "0.15.3"
+urlencoding = "2.1.3"
+global-hotkey = "0.6.4"
+rfd = { version = "0.15.2", default-features = false }
+muda = "0.16.1"
 cocoa = "0.26"
 core-foundation = "0.10.0"
 objc = { version = "0.2.7", features = ["exception"] }
 objc_id = "0.1.1"
-tray-icon = "0.19"
+tray-icon = "0.20.0"
+open = "5.1.2"
+
+# web
+gloo-dialogs = "0.2.0"
 
 # native
-keyboard-types = "0.7"
+keyboard-types = { version = "0.7", default-features = false }
 winit = { version = "0.30.2", features = ["rwh_06"] }
 
 # disable debug symbols in dev builds - shouldn't matter for downstream crates but makes our binaries (examples, cli, etc) build faster
@@ -303,7 +320,7 @@ incremental = true
 inherits = "release"
 opt-level = 'z'
 lto = true
-debug=true
+debug = true
 
 # a profile for running the CLI that's also incremental
 [profile.cli-release-dev]
@@ -348,7 +365,7 @@ repository = "https://github.com/DioxusLabs/dioxus/"
 homepage = "https://dioxuslabs.com"
 documentation = "https://dioxuslabs.com"
 keywords = ["dom", "ui", "gui", "react", "wasm"]
-rust-version = "1.79.0"
+rust-version = "1.80.0"
 publish = false
 version = "0.6.3"
 
@@ -364,28 +381,22 @@ wasm-split = { workspace = true }
 [dev-dependencies]
 dioxus = { workspace = true, features = ["router"] }
 dioxus-ssr = { workspace = true }
-futures-util = "0.3.31"
-separator = "0.4.1"
-serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0.79"
-rand = { version = "0.8.4", features = ["small_rng"] }
-form_urlencoded = "1.2.0"
-async-std = "1.12.0"
+futures-util = { workspace = true }
+separator = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+rand = { workspace = true, features = ["small_rng"] }
+form_urlencoded = "1.2.1"
+async-std = "1.13.0"
 web-time = "1.1.0"
 axum = { workspace = true, default-features = true }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-getrandom = { version = "0.2.12", features = ["js"] }
-tokio = { version = "1.40", default-features = false, features = [
-    "sync",
-    "macros",
-    "io-util",
-    "rt",
-    "time"
-] }
+getrandom = { workspace = true }
+tokio = { version = "1.43", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-tokio = { version = "1.40", features = ["full"] }
+tokio = { version = "1.43", features = ["full"] }
 
 # force vendored openssl on android
 [target.'cfg(target_os = "android")'.dev-dependencies]
