--- a/example-projects/file-explorer/Cargo.toml
+++ b/example-projects/file-explorer/Cargo.toml
@@ -8,4 +8,4 @@ publish = false
 
 [dependencies]
 dioxus = { workspace = true, features = ["desktop"] }
-open = "5.1.2"
+open = { workspace = true }
