--- a/examples/fullstack-hello-world/Cargo.toml
+++ b/examples/fullstack-hello-world/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 
 [dependencies]
 dioxus = { workspace = true, features = ["fullstack"]}
-serde = "1.0.159"
+serde = { workspace = true }
 reqwest = { workspace = true }
 
 [features]
