--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/DioxusLabs/dioxus/"
 homepage = "https://dioxuslabs.com"
 keywords = ["web", "desktop", "mobile", "gui", "wasm"]
+rust-version = "1.76.0"
 
 [dependencies]
 dioxus-core-types = { workspace = true }
@@ -33,11 +34,11 @@ rand = { workspace = true }
 reqwest = { workspace = true }
 tracing-subscriber = { workspace = true, default-features = true }
 tracing-fluent-assertions = "0.3.0"
-pretty_assertions = "1.3.0"
+pretty_assertions = { workspace = true }
 sysinfo = "0.33.1"
 
 [dev-dependencies.web-sys]
-version = "0.3.56"
+version = "0.3.77"
 features = ["Document", "HtmlElement", "Window"]
 
 [features]
