--- a/packages/dioxus/Cargo.toml
+++ b/packages/dioxus/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/DioxusLabs/dioxus/"
 homepage = "https://dioxuslabs.com"
 keywords = ["web", "desktop", "mobile", "gui", "wasm"]
-rust-version = "1.79.0"
+rust-version = "1.80.0"
 
 [dependencies]
 dioxus-core = { workspace = true }
@@ -40,7 +40,21 @@ dioxus-cli-config = { workspace = true, optional = true }
 dioxus-devtools = { workspace = true, optional = true }
 
 [features]
-default = ["macro", "html", "signals", "hooks", "launch",  "mounted", "file_engine", "document", "asset", "devtools", "logger", "warnings", "cli-config"]
+default = [
+  "macro",
+  "html",
+  "signals",
+  "hooks",
+  "launch",
+  "mounted",
+  "file_engine",
+  "document",
+  "asset",
+  "devtools",
+  "logger",
+  "warnings",
+  "cli-config",
+]
 minimal = ["macro", "html", "signals", "hooks", "launch"]
 signals = ["dep:dioxus-signals"]
 macro = ["dep:dioxus-core-macro"]
@@ -54,7 +68,10 @@ document = ["dioxus-web?/document", "dep:dioxus-document", "dep:dioxus-history"]
 logger = ["dep:dioxus-logger"]
 cli-config = ["dep:dioxus-cli-config"]
 warnings = ["dep:warnings"]
-wasm-split = ["dep:wasm-split", "dioxus-config-macros/wasm-split"] # note: to turn on the router splitter, you need to manually enable wasm-split on the router
+wasm-split = [
+  "dep:wasm-split",
+  "dioxus-config-macros/wasm-split",
+] # note: to turn on the router splitter, you need to manually enable wasm-split on the router
 
 launch = ["dep:dioxus-config-macro"]
 router = ["dep:dioxus-router"]
@@ -63,7 +80,13 @@ router = ["dep:dioxus-router"]
 fullstack = ["dep:dioxus-fullstack", "dioxus-config-macro/fullstack", "dep:serde"]
 desktop = ["dep:dioxus-desktop", "dioxus-fullstack?/desktop", "dioxus-config-macro/desktop"]
 mobile = ["dep:dioxus-mobile", "dioxus-fullstack?/mobile", "dioxus-config-macro/mobile"]
-web = ["dep:dioxus-web", "dioxus-fullstack?/web", "dioxus-config-macro/web", "dep:dioxus-cli-config", "dioxus-cli-config?/web"]
+web = [
+  "dep:dioxus-web",
+  "dioxus-fullstack?/web",
+  "dioxus-config-macro/web",
+  "dep:dioxus-cli-config",
+  "dioxus-cli-config?/web",
+]
 ssr = ["dep:dioxus-ssr", "dioxus-config-macro/ssr"]
 liveview = ["dep:dioxus-liveview", "dioxus-config-macro/liveview"]
 server = ["dioxus-fullstack?/axum", "dioxus-fullstack?/server", "ssr", "dioxus-liveview?/axum"]
@@ -75,10 +98,10 @@ third-party-renderer = []
 [dev-dependencies]
 futures-util = { workspace = true }
 tracing = { workspace = true }
-rand = { version = "0.8.4", features = ["small_rng"] }
+rand = { workspace = true, features = ["small_rng"] }
 criterion = { workspace = true }
 thiserror = { workspace = true }
-env_logger = "0.10.0"
+env_logger = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 dioxus = { workspace = true }
 
@@ -88,15 +111,4 @@ harness = false
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
-features = [
-    "router",
-    "ssr",
-    "web",
-    "fullstack",
-    "signals",
-    "hooks",
-    "html",
-    "liveview",
-    "server",
-    "warnings"
-]
+features = ["router", "ssr", "web", "fullstack", "signals", "hooks", "html", "liveview", "server", "warnings"]
