--- a/packages/history/Cargo.toml
+++ b/packages/history/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["dom", "ui", "gui", "react"]
 
 [dependencies]
 dioxus-core = { workspace = true }
-tracing.workspace = true
+tracing = { workspace = true }
 
 [dev-dependencies]
 dioxus = { workspace = true, features = ["router"] }
