--- a/packages/liveview/Cargo.toml
+++ b/packages/liveview/Cargo.toml
@@ -18,10 +18,10 @@ futures-util = { workspace = true, default-features = false, features = [
 ] }
 futures-channel = { workspace = true }
 tokio = { workspace = true, features = ["time", "macros"] }
-tokio-stream = { version = "0.1.11", features = ["net"] }
-tokio-util = { version = "0.7.4", features = ["rt"] }
-serde = { version = "1.0.151", features = ["derive"] }
-serde_json = "1.0.91"
+tokio-stream = { workspace = true, features = ["net"] }
+tokio-util = { workspace = true, features = ["rt"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 dioxus-html = { workspace = true, features = ["serialize"] }
 dioxus-document = { workspace = true }
 dioxus-history = { workspace = true }
