--- a/packages/playwright-tests/web/Cargo.toml
+++ b/packages/playwright-tests/web/Cargo.toml
@@ -8,8 +8,8 @@ publish = false
 
 [dependencies]
 dioxus = { workspace = true, features = ["web"]}
-serde_json = "1.0.96"
-tracing.workspace = true
-tracing-wasm = "0.2.1"
-wasm-bindgen.workspace = true
+serde_json = { workspace = true }
+tracing = { workspace = true }
+tracing-wasm = { workspace = true }
+wasm-bindgen = { workspace = true }
 web-sys = { workspace = true, features = ["Element", "Window"] }
