Env logger feature (#3775)
* feat: Expose and configure tracing env-filter

* doc: Add env-filter doc part

* chore: Remove conditional import

* Move logger env-filter feature out of feature flag

* Update logger env filtering

* Add RUST_LOG to the process from the cli

* Typo

* fix clippy

* clippy

--- a/packages/logger/Cargo.toml
+++ b/packages/logger/Cargo.toml
@@ -15,7 +15,10 @@ categories = ["development-tools::debugging"]
 [dependencies]
 dioxus-cli-config = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true, features = ["registry", "std"] }
+tracing-subscriber = { workspace = true, features = ["registry", "std", "env-filter"] }
+
+[features]
+default = []
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tracing-wasm = { workspace = true }
