--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -70,6 +70,7 @@ features = [
     "ResizeObserverEntry",
     "ResizeObserverSize",
     "ScrollRestoration",
+    "ScrollToOptions",
     "Text",
     "Touch",
     "TouchEvent",
