Fix dx serve proxying of websocket connections established from the browser (#3895)
* better ws request detection

* proxy ws connections

* improve naming

* perform case-insensitive header comparison

* preserve request headers when proxying websocket connection

* avoid side effects in conversion function

* fix websocket proxying for axum 0.8

* remove redundant conversions

---------

Co-authored-by: Evan Almloff <evanalmloff@gmail.com>

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -41,6 +41,7 @@ html_parser = { workspace = true }
 cargo_metadata = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tokio-stream = { workspace = true }
+tokio-tungstenite = { workspace = true }
 chrono = { workspace = true }
 anyhow = { workspace = true }
 hyper = { workspace = true }
