--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,71 +127,71 @@ members = [
 ]
 
 [workspace.package]
-version = "0.6.3"
+version = "0.7.0-alpha.0"
 
 # dependencies that are shared across packages
 [workspace.dependencies]
-dioxus = { path = "packages/dioxus", version = "0.6.2" }
-dioxus-lib = { path = "packages/dioxus-lib", version = "0.6.2" }
-dioxus-core = { path = "packages/core", version = "0.6.2" }
-dioxus-core-types = { path = "packages/core-types", version = "0.6.2" }
-dioxus-core-macro = { path = "packages/core-macro", version = "0.6.2" }
-dioxus-config-macro = { path = "packages/config-macro", version = "0.6.2" }
-dioxus-router = { path = "packages/router", version = "0.6.2" }
-dioxus-router-macro = { path = "packages/router-macro", version = "0.6.2" }
-dioxus-document = { path = "packages/document", version = "0.6.2", default-features = false }
-dioxus-history = { path = "packages/history", version = "0.6.2", default-features = false }
-dioxus-html = { path = "packages/html", version = "0.6.2", default-features = false }
-dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.6.2" }
-dioxus-hooks = { path = "packages/hooks", version = "0.6.2" }
-dioxus-web = { path = "packages/web", version = "0.6.2", default-features = false }
-dioxus-isrg = { path = "packages/isrg", version = "0.6.2" }
-dioxus-ssr = { path = "packages/ssr", version = "0.6.2", default-features = false }
-dioxus-desktop = { path = "packages/desktop", version = "0.6.2", default-features = false }
-dioxus-mobile = { path = "packages/mobile", version = "0.6.2" }
-dioxus-interpreter-js = { path = "packages/interpreter", version = "0.6.2" }
-dioxus-liveview = { path = "packages/liveview", version = "0.6.2" }
-dioxus-autofmt = { path = "packages/autofmt", version = "0.6.2" }
-dioxus-check = { path = "packages/check", version = "0.6.2" }
-dioxus-rsx = { path = "packages/rsx", version = "0.6.2" }
-dioxus-rsx-hotreload = { path = "packages/rsx-hotreload", version = "0.6.2" }
-dioxus-rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.6.2" }
-dioxus-signals = { path = "packages/signals", version = "0.6.2" }
-dioxus-cli-config = { path = "packages/cli-config", version = "0.6.2" }
-dioxus-cli-opt = { path = "packages/cli-opt", version = "0.6.2" }
-dioxus-devtools = { path = "packages/devtools", version = "0.6.2" }
-dioxus-devtools-types = { path = "packages/devtools-types", version = "0.6.2" }
-dioxus-server = { path = "packages/server", version = "0.6.2" }
-dioxus-fullstack = { path = "packages/fullstack", version = "0.6.2" }
-dioxus-fullstack-hooks = { path = "packages/fullstack-hooks", version = "0.6.3" }
-dioxus-fullstack-protocol = { path = "packages/fullstack-protocol", version = "0.6.3" }
-dioxus_server_macro = { path = "packages/server-macro", version = "0.6.2", default-features = false }
-dioxus-dx-wire-format = { path = "packages/dx-wire-format", version = "0.6.2" }
-dioxus-logger = { path = "packages/logger", version = "0.6.2" }
-dioxus-native = { path = "packages/native", version = "0.6.2" }
-dioxus-asset-resolver = { path = "packages/asset-resolver", version = "0.6.2" }
-dioxus-config-macros = { path = "packages/config-macros", version = "0.6.3" }
-const-serialize = { path = "packages/const-serialize", version = "0.6.2" }
-const-serialize-macro = { path = "packages/const-serialize-macro", version = "0.6.2" }
-generational-box = { path = "packages/generational-box", version = "0.6.2" }
-lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.2" }
+dioxus = { path = "packages/dioxus", version = "0.7.0-alpha.0" }
+dioxus-lib = { path = "packages/dioxus-lib", version = "0.7.0-alpha.0" }
+dioxus-core = { path = "packages/core", version = "0.7.0-alpha.0" }
+dioxus-core-types = { path = "packages/core-types", version = "0.7.0-alpha.0" }
+dioxus-core-macro = { path = "packages/core-macro", version = "0.7.0-alpha.0" }
+dioxus-config-macro = { path = "packages/config-macro", version = "0.7.0-alpha.0" }
+dioxus-router = { path = "packages/router", version = "0.7.0-alpha.0" }
+dioxus-router-macro = { path = "packages/router-macro", version = "0.7.0-alpha.0" }
+dioxus-document = { path = "packages/document", version = "0.7.0-alpha.0", default-features = false }
+dioxus-history = { path = "packages/history", version = "0.7.0-alpha.0", default-features = false }
+dioxus-html = { path = "packages/html", version = "0.7.0-alpha.0", default-features = false }
+dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.7.0-alpha.0" }
+dioxus-hooks = { path = "packages/hooks", version = "0.7.0-alpha.0" }
+dioxus-web = { path = "packages/web", version = "0.7.0-alpha.0", default-features = false }
+dioxus-isrg = { path = "packages/isrg", version = "0.7.0-alpha.0" }
+dioxus-ssr = { path = "packages/ssr", version = "0.7.0-alpha.0", default-features = false }
+dioxus-desktop = { path = "packages/desktop", version = "0.7.0-alpha.0", default-features = false }
+dioxus-mobile = { path = "packages/mobile", version = "0.7.0-alpha.0" }
+dioxus-interpreter-js = { path = "packages/interpreter", version = "0.7.0-alpha.0" }
+dioxus-liveview = { path = "packages/liveview", version = "0.7.0-alpha.0" }
+dioxus-autofmt = { path = "packages/autofmt", version = "0.7.0-alpha.0" }
+dioxus-check = { path = "packages/check", version = "0.7.0-alpha.0" }
+dioxus-rsx = { path = "packages/rsx", version = "0.7.0-alpha.0" }
+dioxus-rsx-hotreload = { path = "packages/rsx-hotreload", version = "0.7.0-alpha.0" }
+dioxus-rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.7.0-alpha.0" }
+dioxus-signals = { path = "packages/signals", version = "0.7.0-alpha.0" }
+dioxus-cli-config = { path = "packages/cli-config", version = "0.7.0-alpha.0" }
+dioxus-cli-opt = { path = "packages/cli-opt", version = "0.7.0-alpha.0" }
+dioxus-devtools = { path = "packages/devtools", version = "0.7.0-alpha.0" }
+dioxus-devtools-types = { path = "packages/devtools-types", version = "0.7.0-alpha.0" }
+dioxus-server = { path = "packages/server", version = "0.7.0-alpha.0" }
+dioxus-fullstack = { path = "packages/fullstack", version = "0.7.0-alpha.0" }
+dioxus-fullstack-hooks = { path = "packages/fullstack-hooks", version = "0.7.0-alpha.0" }
+dioxus-fullstack-protocol = { path = "packages/fullstack-protocol", version = "0.7.0-alpha.0" }
+dioxus_server_macro = { path = "packages/server-macro", version = "0.7.0-alpha.0", default-features = false }
+dioxus-dx-wire-format = { path = "packages/dx-wire-format", version = "0.7.0-alpha.0" }
+dioxus-logger = { path = "packages/logger", version = "0.7.0-alpha.0" }
+dioxus-native = { path = "packages/native", version = "0.7.0-alpha.0" }
+dioxus-asset-resolver = { path = "packages/asset-resolver", version = "0.7.0-alpha.0" }
+dioxus-config-macros = { path = "packages/config-macros", version = "0.7.0-alpha.0" }
+const-serialize = { path = "packages/const-serialize", version = "0.7.0-alpha.0" }
+const-serialize-macro = { path = "packages/const-serialize-macro", version = "0.7.0-alpha.0" }
+generational-box = { path = "packages/generational-box", version = "0.7.0-alpha.0" }
+lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.7.0-alpha.0" }
 
 # subsecond
-subsecond-types = { path = "packages/subsecond/subsecond-types", version = "0.6.3" }
-subsecond = { path = "packages/subsecond/subsecond", version = "0.6.3" }
+subsecond-types = { path = "packages/subsecond/subsecond-types", version = "0.7.0-alpha.0" }
+subsecond = { path = "packages/subsecond/subsecond", version = "0.7.0-alpha.0" }
 
 # manganis
-manganis = { path = "packages/manganis/manganis", version = "0.6.2" }
-manganis-core = { path = "packages/manganis/manganis-core", version = "0.6.2" }
-manganis-macro = { path = "packages/manganis/manganis-macro", version = "0.6.2" }
+manganis = { path = "packages/manganis/manganis", version = "0.7.0-alpha.0" }
+manganis-core = { path = "packages/manganis/manganis-core", version = "0.7.0-alpha.0" }
+manganis-macro = { path = "packages/manganis/manganis-macro", version = "0.7.0-alpha.0" }
 
 # wasm-split
-wasm-split = { path = "packages/wasm-split/wasm-split", version = "0.1.0" }
-wasm-split-macro = { path = "packages/wasm-split/wasm-split-macro", version = "0.1.0" }
-wasm-split-cli = { path = "packages/wasm-split/wasm-split-cli", version = "0.1.0" }
-wasm-split-harness = { path = "packages/playwright-tests/wasm-split-harness", version = "0.1.0" }
+wasm-split = { path = "packages/wasm-split/wasm-split", version = "0.7.0-alpha.0" }
+wasm-split-macro = { path = "packages/wasm-split/wasm-split-macro", version = "0.7.0-alpha.0" }
+wasm-split-cli = { path = "packages/wasm-split/wasm-split-cli", version = "0.7.0-alpha.0" }
+wasm-split-harness = { path = "packages/playwright-tests/wasm-split-harness", version = "0.7.0-alpha.0" }
 
-depinfo = { path = "packages/depinfo", version = "0.6.3" }
+depinfo = { path = "packages/depinfo", version = "0.7.0-alpha.0" }
 warnings = { version = "0.2.1" }
 
 # a fork of pretty please for tests - let's get off of this if we can!
@@ -400,7 +400,7 @@ documentation = "https://dioxuslabs.com"
 keywords = ["dom", "ui", "gui", "react", "wasm"]
 rust-version = "1.80.0"
 publish = false
-version = "0.6.3"
+version = "0.7.0-alpha.0"
 
 [dependencies]
 reqwest = { workspace = true, features = ["json"], optional = true }
