--- a/_typos.toml
+++ b/_typos.toml
@@ -5,6 +5,9 @@ ratatui = "ratatui"
 lits = "lits"
 # https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/seeked_event
 seeked = "seeked"
+# https://developer.apple.com/forums/thread/108953
+# udid = unique device identifier
+udid = "udid"
 
 [files]
 extend-exclude = ["translations/*", "CHANGELOG.md", "*.js"]
