--- a/packages/wasm-split/wasm-split/Cargo.toml
+++ b/packages/wasm-split/wasm-split/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm-split"
+name = "wasm-splitter"
 version = { workspace = true }
 edition = "2021"
 authors = ["Jonathan Kelley"]
