--- a/packages/wasm-split/wasm-split-cli/Cargo.toml
+++ b/packages/wasm-split/wasm-split-cli/Cargo.toml
@@ -20,4 +20,4 @@ rayon = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 tracing = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
-wasm-used = { path = "../wasm-used" }
+wasm-used = { workspace = true}
