--- a/packages/router/Cargo.toml
+++ b/packages/router/Cargo.toml
@@ -34,6 +34,7 @@ ciborium = { workspace = true }
 base64 = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
+dioxus-router = { workspace = true }
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
